--- a/maxdemon.kv
+++ b/maxdemon.kv
@@ -114,7 +114,7 @@
                     on_release: btn1.background_color=(0.9, 0.1, 0.1, 1)
                 Button:
                     id: btn2
-                    text: "(2) process DROIDS training set"   
+                    text: "(2) process train/test data sets"   
                     on_press: root.btn2()
                     background_color: 0.1, 0.9, 0.9, 1
                     on_release: btn2.background_color=(0.9, 0.1, 0.1, 1)
