--- a/droids3.kv
+++ b/droids3.kv
@@ -4,7 +4,7 @@
         size: root.width-200, root.height-200
         pos: 100, 100
         Label:
-            text: 'DROIDS+maxDemon - Machine Learning Functional Binding Analyses'
+            text: 'DROIDS+maxDemon - Machine Learning for Functional Binding Analyses'
             font_size: 22
             size_hint: 0.5, 0.2
             bold: True
